# rag-evaluation

./: .env.example  .gitignore  README.md  data.py  eval.ipynb  pyproject.toml
