[project]
name = "ragas-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dataset>=1.6.2",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "pinecone>=7.3.0",
    "pydantic>=2.12.4",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "ragas>=0.3.9",
    "streamlit>=1.51.0",
    "transformers>=4.57.1",
]
